deploy/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proyecto-node
  labels:
    app: proyecto-node
spec:
  replicas: 3
  selector:
    matchLabels:
      app: proyecto-node
  template:
    metadata:
      labels:
        app: proyecto-node
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: servicio-node
        image: ghcr.io/bootcampdevops2023/proyecto-node:v1.0.2
        
        ports:
        - containerPort: 5000
