deploy/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: proyecto-node
spec:
  selector:
    app: proyecto-node
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
