deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proyecto-node
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "caixabank.es"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: proyecto-node
            port:
              number: 80
